# es_scroller

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md
src/: args.rs  elasticsearch.rs  lib.rs  main.rs
src/elasticsearch/: client.rs  errors.rs  mod.rs  models.rs
tests/: docker-compose.yml  test.rs
tests/init-elastic/: Dockerfile  init.sh
