[package]
name = "scroller"
version = "0.1.0"
authors = ["Davide Giovannini <giovannini.davide90@gmail.com>"]

[dependencies]
reqwest = "*"
serde_json = "*"
serde = "*"
serde_derive = "*"
structopt = "*"
indicatif = "*"


[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "my_benchmark"
harness = false